#8025-TP [TASK] * work in progress on implementing sortable container ember view

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -73,3 +73,9 @@ textarea,
 .uneditable-input {
     width: 540px;
 }
+
+.sortable .ui-state-default {
+    cursor: pointer;
+    /*display: block;*/
+    background: #ffffff;
+}
